GitHub URL added

--- a/src/app/Components/about/about.component.html
+++ b/src/app/Components/about/about.component.html
@@ -4,6 +4,6 @@
         <p class="lead">This is a simple User Registration form </p>
         <hr class="my-4">
         <p>Created on 31-05-2022</p>
-        <a class="btn btn-primary btn-sm" target="_blank" routerLink="/about" role="button">GitHub Repo</a>
+        <a class="btn btn-primary btn-sm" target="_blank" href="https://github.com/Abhilashgupta2706/Registration-Form-Angular" role="button">GitHub Repo</a>
     </div>
 </div>
